--- a/lib/kamansky_web/live/listing_live/sold.html.heex
+++ b/lib/kamansky_web/live/listing_live/sold.html.heex
@@ -24,6 +24,7 @@
         sort: %{action: :sold, direction: :desc, column: 1}
       ]
     }
+    parent_action={:sold}
     title={@page_title}
   >
     <td>
