--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -31,4 +31,5 @@
     <td><%= format_decimal_as_currency(stamp.median_sale_price) %></td>
     <td><%= format_decimal_as_currency(stamp.total_profit) %></td>
   </.live_component>
+  <KamanskyWeb.TrendLive.Components.footer socket={@socket} />
 </section>
