--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -8,7 +8,7 @@
         [
           "Scott Number",
           "Total Sold",
-          "Conversion %",
+          "Conversion",
           "Median Sale Price",
           "Total Profit"
         ]
@@ -27,7 +27,7 @@
   >
     <td><%= stamp.scott_number %></td>
     <td><%= stamp.total_sold %></td>
-    <td><%= round(stamp.conversion_percentage) %></td>
+    <td><%= round(stamp.conversion_percentage) %>%</td>
     <td><%= format_decimal_as_currency(stamp.median_sale_price) %></td>
     <td><%= format_decimal_as_currency(stamp.total_profit) %></td>
   </.live_component>
