Initialize settings panel

--- a/lib/kamansky_web/templates/layout/live.html.heex
+++ b/lib/kamansky_web/templates/layout/live.html.heex
@@ -74,7 +74,7 @@
                   %>
                 <% end %>
                 <div 
-                  class="inline-block relative text-left"
+                  class="inline-block relative text-left z-20"
                   x-data="{adminDropdown: false}" 
                   x-on:click.away="adminDropdown = false"
                 >
