--- a/lib/kamansky_web/templates/layout/root.html.heex
+++ b/lib/kamansky_web/templates/layout/root.html.heex
@@ -12,5 +12,8 @@
   </head>
   <body class="bg-gray-200 text-gray-700 text-sm">
     <%= @inner_content %>
+    <%= if @current_user do %>
+      <%= live_render @conn, KamanskyWeb.NotificationLive.Notifications %>
+    <% end %>
   </body>
 </html>
