Revamped listings with bids

--- a/lib/kamansky_web/live/listing_live/bid.html.heex
+++ b/lib/kamansky_web/live/listing_live/bid.html.heex
@@ -12,9 +12,9 @@
       [
         "Scott Number",
         "Inventory Key",
-        "Grade",
-        "Price",
-        "Listing Date",
+        "Bids",
+        "Current Price",
+        "Ending Date",
         %{text: "Actions", sort: :disabled}
       ]
     }
@@ -26,7 +26,7 @@
       ]
     }
     parent_action={:bid}
-    title="Listings with eBay Bids"
+    title="Listings with Bids"
   >
     <td>
       <a
@@ -39,50 +39,13 @@
       </a>
     </td>
     <td>#<%= listing.stamp.inventory_key %></td>
-    <td>
-      <span><%= Stamp.formatted_grade(listing.stamp) %></span>
-      <%= if Stamp.flaws?(listing.stamp) do %>
-        <sup class="fs-6">
-          <a
-            tabindex="0"
-            title="Flaws"
-          >*</a>
-        </sup>
-      <% end %>
-    </td>
-    <td><%= format_decimal_as_currency(listing.listing_price) %></td>
-    <td><%= formatted_date(listing.inserted_at) %></td>
-    <td>
-      <a
-        class="action-icon"
-        title="Add Listing to Order"
-        phx-click="open"
-        phx-target="#listing-add-to-order-form-modal"
-        phx-value-listing-id={listing.id}
-      >
-        <svg 
-          xmlns="http://www.w3.org/2000/svg" 
-          class="h-5 w-5" 
-          fill="none" 
-          viewBox="0 0 24 24" 
-          stroke="currentColor"
-        >
-          <path 
-            stroke-linecap="round" 
-            stroke-linejoin="round" 
-            stroke-width="2" 
-            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" 
-          />
-        </svg>
-      </a>
-    </td>
+    <td><%= listing.ebay_listing.bid_count %></td>
+    <td><%= format_decimal_as_currency(listing.ebay_listing.current_bid) %></td>
+    <td><%= formatted_date(listing.ebay_listing.end_time) %></td>
+    <td></td>
   </.live_component>
   <KamanskyWeb.ListingLive.Components.tabs socket={@socket} />
 </section>
-<%= live_modal KamanskyWeb.ListingLive.AddToOrderFormComponent,
-  id: "listing-add-to-order-form-modal",
-  form_id: "listing-add-to-order-form"
-%>
 <%= live_modal KamanskyWeb.StampLive.DetailComponent,
   id: "stamp-detail-modal",
   footer: false 
