--- a/lib/kamansky_web/templates/layout/live.html.heex
+++ b/lib/kamansky_web/templates/layout/live.html.heex
@@ -1,438 +1,10 @@
-<header class="bg-white">
-  <nav class="bg-gray-800" x-data="{menuOpen: false}">
-    <div class="max-w-7xl mx-auto pr-2 sm:pr-6 lg:pr-8">
-      <div class="relative flex items-center justify-between h-16">
-        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-          <!-- Mobile menu button-->
-          <button
-            type="button" 
-            class="
-              inline-flex 
-              items-center 
-              justify-center 
-              p-2 
-              rounded-md 
-              text-gray-400 
-              hover:text-white 
-              hover:bg-gray-700 
-              focus:outline-none 
-              focus:ring-2 
-              focus:ring-inset 
-              focus:ring-white" 
-            aria-controls="mobile-menu" 
-            aria-expanded="false"
-            x-on:click="menuOpen = !menuOpen"
-          >
-            <span class="sr-only">Open main menu</span>
-            <svg 
-              class="h-6 w-6" 
-              :class="menuOpen ? 'hidden' : 'block'"
-              xmlns="http://www.w3.org/2000/svg" 
-              fill="none" 
-              viewBox="0 0 24 24" 
-              stroke="currentColor" 
-              aria-hidden="true"
-            >
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-            <svg 
-              class="h-6 w-6" 
-              :class="menuOpen ? 'block' : 'hidden'"
-              xmlns="http://www.w3.org/2000/svg" 
-              fill="none" 
-              viewBox="0 0 24 24" 
-              stroke="currentColor" 
-              aria-hidden="true"
-            >
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
-        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-          <div class="flex-shrink-0 flex items-center px-5">
-            <%= live_redirect to: Routes.dashboard_index_path(@socket, :index) do %>
-              <img 
-                class="h-8 w-auto" 
-                src={Routes.static_path(@socket, "/images/bumppoman-stamps-logo-white.svg")} 
-                alt="Bumppoman Stamps"
-              />
-            <% end %>
-          </div>
-          <%= if @current_user do %>
-            <div class="hidden sm:block sm:ml-6">
-              <div class="flex space-x-4">
-                <KamanskyWeb.Components.Page.navbar_link
-                  platform="desktop"
-                  title="Collection" 
-                  to={Routes.stamp_index_path(@socket, :collection)}
-                  active={@socket.view == KamanskyWeb.StampLive.Index and @live_action == :collection}
-                />
-                <KamanskyWeb.Components.Page.navbar_link
-                  platform="desktop"
-                  title="Stock" 
-                  to={Routes.stamp_index_path(@socket, :stock)}
-                  active={@socket.view == KamanskyWeb.StampLive.Index and @live_action == :stock}
-                />
-                <KamanskyWeb.Components.Page.navbar_link
-                  platform="desktop"
-                  title="Listings" 
-                  to={Routes.listing_active_path(@socket, :index)}
-                  active={@socket.view in [KamanskyWeb.ListingLive.Active, KamanskyWeb.ListingLive.Bid, KamanskyWeb.ListingLive.Sold]}
-                />
-                <KamanskyWeb.Components.Page.navbar_link
-                  platform="desktop"
-                  title="Orders" 
-                  to={Routes.order_index_path(@socket, :pending)}
-                  active={@socket.view in [KamanskyWeb.OrderLive.Index, KamanskyWeb.OrderLive.Show]}
-                />
-                <div 
-                  class="inline-block relative text-left z-20"
-                  x-data="{adminDropdown: false}" 
-                  x-on:click.away="adminDropdown = false"
-                >
-                  <div>
-                    <button 
-                      type="button" 
-                      class="
-                        font-medium
-                        inline-flex 
-                        justify-center 
-                        px-4 
-                        py-2
-                        rounded-md
-                        shadow-sm
-                        text-gray-300
-                        text-sm
-                        w-full
-                        hover:bg-gray-700 
-                        hover:text-white
-                        focus:outline-none 
-                        focus:ring-2 
-                        focus:ring-offset-2 
-                        focus:ring-offset-gray-100 
-                        focus:ring-indigo-500" 
-                      id="menu-button" 
-                      aria-expanded="true" 
-                      aria-haspopup="true"
-                      @click="adminDropdown = !adminDropdown"
-                    >
-                      Admin
-                      <!-- Heroicon name: solid/chevron-down -->
-                      <svg 
-                        class="-mr-1 ml-2 h-5 w-5" 
-                        xmlns="http://www.w3.org/2000/svg" 
-                        viewBox="0 0 20 20" 
-                        fill="currentColor" 
-                        aria-hidden="true"
-                      >
-                        <path 
-                          fill-rule="evenodd" 
-                          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" 
-                          clip-rule="evenodd" 
-                        />
-                      </svg>
-                    </button>
-                  </div>
-                  <div 
-                    class="
-                      absolute
-                      bg-white
-                      mt-2 
-                      origin-top-left
-                      left-0
-                      ring-1
-                      ring-black
-                      ring-opacity-5
-                      rounded-md
-                      shadow-lg
-                      transition
-                      w-56 
-                      focus:outline-none" 
-                    role="menu" 
-                    aria-orientation="vertical" 
-                    aria-labelledby="menu-button" 
-                    tabindex="-1" 
-                    x-show="adminDropdown"
-                    x-transition:enter="ease-out duration-100"
-                    x-transition:enter-start="opacity-100 scale-95"
-                    x-transition:enter-end="opacity-100 scale-100"
-                    x-transition:leave="ease-in duration-75"
-                    x-transition:leave-start="opacity-100 scale-100"
-                    x-transition:leave-end="opacity-0 scale-95"
-                  >
-                    <div class="py-1" role="none">
-                      <%= for link <- live_navbar_admin_links(@socket, @live_action) do %>
-                        <%= live_redirect link.title, 
-                          to: link.to, 
-                          class: "block px-4 py-2 text-gray-700 text-sm hover:bg-gray-100 hover:text-gray-900"
-                        %>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
-        <div class="hidden sm:block sm:ml-6">
-          <%= if @current_user do %>
-            <div class="flex items-center">
-              <button type="button" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-                <span class="sr-only">View notifications</span>
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
-                </svg>
-              </button>
-              <div 
-                class="ml-3 relative"
-                x-data="{userMenuOpen: false}"
-                x-on:click.away="userMenuOpen = false"
-              >
-                <div>
-                  <button 
-                    type="button" 
-                    class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" 
-                    id="user-menu-button" 
-                    aria-expanded="false" 
-                    aria-haspopup="true"
-                    x-on:click="userMenuOpen = !userMenuOpen"
-                  >
-                    <span class="sr-only">Open user menu</span>
-                    <svg 
-                      class="h-8 w-8 rounded-full text-blue-300"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 100 100"
-                    >
-                      <circle cx="50" cy="50" r="50" fill="currentColor" />
-                      <text class="text-4xl" stroke="white" fill="white" dominant-baseline="central" text-anchor="middle" x="50" y="50">
-                        <%= @current_user.initials %>
-                      </text>
-                    </svg>
-                  </button>
-                </div>
-                <div 
-                  class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" 
-                  role="menu" 
-                  aria-orientation="vertical" 
-                  aria-labelledby="user-menu-button" 
-                  tabindex="-1"
-                  x-show="userMenuOpen"
-                  x-transition:enter="ease-out duration-100 transition"
-                  x-transition:enter-start="opacity-0 scale-95 transform"
-                  x-transition:enter-end="opacity-100 scale-100 transform"
-                  x-transition:leave="ease-in duration-75 transition"
-                  x-transition:leave-start="opacity-100 scale-100 transform"
-                  x-transition:leave-end="opacity-0 scale-95 transform"
-                >
-                  <%= link "Sign out",
-                    class: "block px-4 py-2 text-sm text-gray-700",
-                    method: :delete,
-                    role: "menuitem",
-                    tabindex: -1,
-                    to: Routes.user_session_path(@socket, :delete)
-                  %>
-                </div>
-              </div>
-            </div>
-          <% else %>
-            <%= link "Sign in",
-              to: Routes.user_session_path(@socket, :new),
-              class: "text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" 
-            %>
-          <% end %>
-        </div>
-      </div>
-      <div class="sm:hidden" id="mobile-menu" x-show="menuOpen">
-        <div class="px-2 pt-2 pb-3 space-y-1">
-          <%= live_redirect "Dashboard",
-            to: Routes.dashboard_index_path(@socket, :index),
-            class: "block font-medium px-3 py-2 rounded-md text-base" <> (
-              if @socket.view == KamanskyWeb.DashboardLive.Index do
-                " bg-gray-900 text-white"
-              else
-                " text-gray-300 hover:bg-gray-700 hover:text-white"
-              end
-            )
-          %>
-          <KamanskyWeb.Components.Page.navbar_link
-            platform="mobile"
-            title="Collection" 
-            to={Routes.stamp_index_path(@socket, :collection)}
-            active={@socket.view == KamanskyWeb.StampLive.Index and @live_action == :collection}
-          />
-          <KamanskyWeb.Components.Page.navbar_link
-            platform="mobile"
-            title="Stock" 
-            to={Routes.stamp_index_path(@socket, :stock)}
-            active={@socket.view == KamanskyWeb.StampLive.Index and @live_action == :stock}
-          />
-          <KamanskyWeb.Components.Page.navbar_link
-            platform="mobile"
-            title="Listings" 
-            to={Routes.listing_active_path(@socket, :index)}
-            active={@socket.view in [KamanskyWeb.ListingLive.Active, KamanskyWeb.ListingLive.Bid, KamanskyWeb.ListingLive.Sold]}
-          />
-          <KamanskyWeb.Components.Page.navbar_link
-            platform="mobile"
-            title="Orders" 
-            to={Routes.order_index_path(@socket, :pending)}
-            active={@socket.view in [KamanskyWeb.OrderLive.Index, KamanskyWeb.OrderLive.Show]}
-          />
-        </div>
-      </div>
-    </div>
-  </nav>
-</header>
+<.live_component 
+  module={KamanskyWeb.Components.Header} 
+  id="kamansky-header"
+  current_user={@current_user}
+  live_action={@live_action}
+/>
 <main role="main" class="bg-white mx-auto my-3 p-8 w-11/12">
-    <%= if live_flash(@flash, :info) do %>
-      <div
-        id="kamansky-success-message"
-        class="bg-green-50 flex items-center mx-auto px-4 py-4 w-9/12"
-        phx-hook="successMessage"
-        phx-value-timestamp={live_flash(@flash, :info).timestamp}
-        x-data="{show: true}"
-        x-init="setTimeout(() => show = false, 3000)"
-        x-show="show"
-        x-transition:enter="transition-all ease-out duration-500"
-        x-transition:enter-start="max-h-0 py-0"
-        x-transition:enter-end="max-h-14 py-4"
-        x-transition:leave="transition-all ease-in duration-500" 
-        x-transition:leave-start="max-h-14 py-4" 
-        x-transition:leave-end="max-h-0 py-0"
-        @kamansky:success-message-updated.camel="show = true; setTimeout(() => show = false, 3000)"
-      >
-        <svg 
-          xmlns="http://www.w3.org/2000/svg" 
-          class="h-4 mr-4 text-green-400 w-4" 
-          viewBox="0 0 20 20" 
-          fill="currentColor" 
-          x-show="show" 
-          x-transition:leave="transition-all ease-in duration-500" 
-          x-transition:leave-start="max-h-4 scale-y-100" 
-          x-transition:leave-end="max-h-0 scale-y-0"
-        >
-          <path 
-            fill-rule="evenodd" 
-            d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" 
-            clip-rule="evenodd" 
-          />
-        </svg>
-        <div 
-          class="inline-block text-green-700" 
-          x-show="show" 
-          x-transition:leave="transition-all ease-in duration-500" 
-          x-transition:leave-start="max-h-14 scale-y-100" 
-          x-transition:leave-end="max-h-0 scale-y-0"
-        ><%= live_flash(@flash, :info).message %></div>
-      </div>
-    <% end %>
-    <%= @inner_content %>
-  <div
-    class="fixed z-10 inset-0 overflow-y-auto"
-    x-data="{detail: {action: null, content: null, title: null, values: null}, open: false}"
-    x-on:keydown.window.escape="open = false"
-    x-on:kamansky:open-confirmation-modal.camel.window="() => {
-      open = true;
-      detail = $event.detail;
-
-      if ($event.detail.values) {
-        for (value of $event.detail.values) {
-          $refs.success.setAttribute(`phx-value-${value.key}`, value.value);
-        }
-      }
-    }"
-    x-on:phx:kamansky:close-confirmation-modal.camel.window="open = false"
-    x-show="open"
-    aria-labelledby="modal-title"
-    aria-modal="true"
-  >
-    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-      <div
-        class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
-        x-on:click="open = false"
-        x-show="open"
-        x-transition:enter="ease-out duration-300"
-        x-transition:enter-start="opacity-0"
-        x-transition:enter-end="opacity-100"
-        x-transition:leave="ease-in duration-200"
-        x-transition:leave-start="opacity-100"
-        x-transition:leave-end="opacity-0"
-        aria-hidden="true"
-      > </div>
-      <!-- This element is to trick the browser into centering the modal contents. -->
-      <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">​</span>
-      <div
-        class=
-          "align-bottom
-          bg-white
-          inline-block
-          overflow-hidden
-          pb-4
-          pt-5
-          px-4
-          rounded-lg
-          shadow-xl
-          text-left
-          transform
-          transition-all
-          sm:align-middle
-          sm:max-w-lg
-          sm:my-8
-          sm:p-6
-          sm:w-full"
-        x-show="open"
-        x-transition:enter="ease-out duration-300"
-        x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-        x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
-        x-transition:leave="ease-in duration-200"
-        x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
-        x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-        >
-          <div class="sm:flex sm:items-start">
-            <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-blue-100 sm:mx-0 sm:h-10 sm:w-10">
-              <svg
-                class="h-6 text-blue-600 w-6"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
-                />
-              </svg>
-            </div>
-            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title" x-text="detail.title" />
-              <div class="mt-2">
-                <p class="text-sm text-gray-500" x-text="detail.content" />
-              </div>
-            </div>
-          </div>
-          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-            <button
-              type="button"
-              class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm"
-              :phx-click="detail.action"
-              x-ref="success"
-              x-text="detail.title"
-            />
-            <button
-              type="button"
-              class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm"
-              x-on:click="open = false"
-            >
-              Cancel
-            </button>
-          </div>
-        </div>
-    </div>
-  </div>
+  <KamanskyWeb.Components.Page.success_message flash={@flash} />
+  <%= @inner_content %>
 </main>
-<footer class="font-extralight text-center text-xs">
-  © 2021 Brendon Stanton and Bumppoman Industries.
-</footer>
