--- a/lib/kamansky_web/templates/layout/root.html.heex
+++ b/lib/kamansky_web/templates/layout/root.html.heex
@@ -12,8 +12,10 @@
   </head>
   <body class="bg-gray-200 text-gray-700 text-sm">
     <%= @inner_content %>
-    <%= if @current_user do %>
-      <%= live_render @conn, KamanskyWeb.NotificationLive.Notifications %>
-    <% end %>
+    <%= live_render @conn, KamanskyWeb.NotificationLive.Notifications %>
+    <KamanskyWeb.Components.Page.confirmation_modal />
+    <footer class="font-extralight text-center text-xs">
+      © 2021 Brendon Stanton and Bumppoman Industries.
+    </footer>
   </body>
 </html>
